# voice2voice-ai

./: .env.example  .gitignore  Makefile  README.md  agents.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: setup_env.sh
src/voice_app/: __init__.py  config.py  main.py
src/voice_app/audio/: __init__.py  capture.py  playback.py
src/voice_app/processing/: __init__.py  llm.py
src/voice_app/synthesis/: __init__.py  tts.py
src/voice_app/transcription/: stt.py
tests/: test_capture.py  test_playback.py  test_stt.py  test_tts.py
